# gumo

./: .gitignore  AGENTS.md  CLAUDE.md  Justfile  flake.nix
backend/: Cargo.toml
backend/migrations/: 0001_initial_schema.sql  0001_reference_tables.sql  0002_primary_domain_tables.sql  0003_add_game_tags.sql  0003_add_version_save_path_config.sql  0003_normalized_metadata_tables.sql  0004_artifact_and_save_tables.sql  0005_metadata_provenance_tables.sql  0006_upload_and_job_tables.sql  0007_indexes.sql  0008_seed_platforms.sql  0009_upload_intent_payload.sql  0010_integration_tokens.sql  0011_import_sessions_and_parts.sql  0012_game_version_original_source_name.sql
backend/src/: config.rs  db.rs  domain.rs  lib.rs  main.rs  playnite.rs  time.rs  upload_jobs.rs
backend/src/api/: auth.rs  error.rs  mod.rs  state.rs  types.rs
backend/src/api/routes/: admin.rs  integration.rs  mod.rs  public.rs
config/: gumo.example.toml
docs/: architecture.md  local-development.md  playnite-plugin-development.md
nix/: apps.nix  checks.nix  devshell.nix  module.nix  packages.nix  vm-test.nix
playnite-plugin/: AGENTS.md  Gumo.Playnite.sln  README.md
playnite-plugin/Gumo/: BuildInclude.txt  Gumo.cs  Gumo.csproj  Gumo.sln  GumoApiClient.cs  GumoApiException.cs  GumoApiModels.cs  GumoClient.cs  GumoInstallController.cs  GumoLibraryPlugin.cs  GumoLibrarySettings.cs  GumoLibrarySettingsView.xaml  GumoLibrarySettingsView.xaml.cs  GumoMapper.cs  GumoSettings.cs  GumoSettingsView.xaml  GumoSettingsView.xaml.cs  OptionListPickerWindow.xaml.cs  UploadSourcePickerWindow.xaml  extension.yaml  packages.config
playnite-plugin/Gumo/Properties/: AssemblyInfo.cs
playnite-plugin/packaging/: README.md
playnite-plugin/scripts/: install-dev.ps1  package.ps1
playnite-plugin/src/Gumo.Playnite/: Gumo.Playnite.csproj  GumoApiClient.cs  GumoApiModels.cs  GumoInstallController.cs  GumoLibraryPlugin.cs  GumoLibrarySettings.cs  GumoMapper.cs  (+7 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
workflows/: playnite-plugin-windows.yml
(+38 files in other folders)
