[package]
name = "gumo"
version = "0.1.0"
edition = "2021"

[lib]
name = "gumo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", default-features = false, features = ["macros", "migrate", "sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"

[dev-dependencies]
rust-embed = "8.5.0"
